--- a/api-python/Dockerfile
+++ b/api-python/Dockerfile
@@ -3,16 +3,16 @@ FROM python:3.12-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libopencv-dev \
-    && pip install --no-cache-dir pipenv
+    && pip install --no-cache-dir uv
 
 WORKDIR /app
 
-COPY Pipfile Pipfile.lock ./
+COPY requirements.txt ./
 
-RUN pipenv install --deploy --ignore-pipfile
+RUN uv pip install -r requirements.txt
 
 COPY hypercorn_config.py ./
 
 COPY src/ ./src
 
-CMD ["pipenv", "run", "hypercorn", "-c", "hypercorn_config.py", "src.main:app"]
+CMD ["hypercorn", "-c", "hypercorn_config.py", "src.main:app"]
