--- a/.env.local.example
+++ b/.env.local.example
@@ -8,6 +8,7 @@ FRONTEND_CONTAINER_NAME=frontend_dev
 FRONTEND_DOCKERFILE=Dockerfile.dev
 FRONTEND_PORT=5173
 FRONTEND_INTERNAL_PORT=5173
+VITE_API_URL=http://localhost:3000
 
 # API Node
 API_NODE_CONTAINER_NAME=api_node_dev
@@ -15,6 +16,11 @@ API_NODE_DOCKERFILE=Dockerfile.dev
 API_NODE_PORT=3000
 API_NODE_INTERNAL_PORT=3000
 PRISMA_STUDIO_PORT=5555
+CORS_ORIGIN=http://localhost:5173
+FIRST_ADMIN_PASSWORD=123456abc
+PUBLIC_DIR=/app/outputs
+UPLOAD_DIR=/app/uploads
+JWT_SECRET=secret
 
 # Banco de dados PostgreSQL
 DB_CONTAINER_NAME=postgresql_db
@@ -23,6 +29,7 @@ POSTGRESQL_PASSWORD=docker
 POSTGRESQL_DATABASE=app_database
 POSTGRESQL_PORT_NUMBER=5432
 POSTGRESQL_HOST_PORT=5432
+DATABASE_URL=postgresql://docker:docker@postgresql:5432/app_database
 
 # API Python
 API_PYTHON_CONTAINER_NAME=api_python_dev
