--- a/api-python/Dockerfile.base
+++ b/api-python/Dockerfile.base
@@ -5,15 +5,18 @@ RUN apk add --no-cache \
     build-base \
     zsh \
     git \
-    curl \
-    && pip install --no-cache-dir pipenv
+    curl 
 
-# Instalar oh-my-zsh e plugins
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir uv && \
+    uv --version
+
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended \
     && git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions \
     && git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting \
     && echo "plugins=(git zsh-autosuggestions zsh-syntax-highlighting)" >> /root/.zshrc \
     && echo "source /root/.oh-my-zsh/oh-my-zsh.sh" >> /root/.zshrc \
     && echo "source ${ZSH_CUSTOM:-/root/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> /root/.zshrc
+
 
 WORKDIR /app
