--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,22 +4,20 @@ services:
     build:
       context: ./front-end
       dockerfile: ${FRONTEND_DOCKERFILE:-Dockerfile.dev}
-    env_file:
-      - ./front-end/.env
     ports:
       - "${FRONTEND_PORT:-5173}:${FRONTEND_INTERNAL_PORT:-5173}"
     restart: always
     volumes:
       - ./front-end:/app 
       - /app/node_modules
+    environment:
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:3000}
       
   api:
     container_name: ${API_NODE_CONTAINER_NAME:-api_node_dev}
     build:
       context: ./api-node
       dockerfile: ${API_NODE_DOCKERFILE:-Dockerfile.dev}
-    env_file:
-      - ./api-node/.env
     ports:
       - "${API_NODE_PORT:-3000}:${API_NODE_INTERNAL_PORT:-3000}"
       - "${PRISMA_STUDIO_PORT:-5555}:5555"
@@ -33,15 +31,22 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=${NODE_ENV:-development}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://docker:docker@postgresql:5432/predictions-db}
+      - API_PORT=${API_NODE_INTERNAL_PORT:-3000}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:5173}
+      - FIRST_ADMIN_PASSWORD=${FIRST_ADMIN_PASSWORD:-123456abc}
+      - PUBLIC_DIR=${PUBLIC_DIR:-/app/outputs}
+      - UPLOAD_DIR=${UPLOAD_DIR:-/app/uploads}
+      - JWT_SECRET=${JWT_SECRET:-secret}
 
   postgresql:
     container_name: ${DB_CONTAINER_NAME:-postgresql_db}
-    image: bitnami/postgresql:latest
+    image: bitnami/postgresql:16
     environment:
-      - POSTGRESQL_USERNAME=${POSTGRESQL_USERNAME}
-      - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD}
-      - POSTGRESQL_DATABASE=${POSTGRESQL_DATABASE}
-      - POSTGRESQL_PORT_NUMBER=${POSTGRESQL_PORT_NUMBER}
+      - POSTGRESQL_USERNAME=${POSTGRESQL_USERNAME:-docker}
+      - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD:-docker}
+      - POSTGRESQL_DATABASE=${POSTGRESQL_DATABASE:-predictions-db}
+      - POSTGRESQL_PORT_NUMBER=${POSTGRESQL_PORT_NUMBER:-5432}
     restart: always
     ports:
       - "${POSTGRESQL_HOST_PORT:-5432}:${POSTGRESQL_PORT_NUMBER:-5432}"
@@ -60,6 +65,7 @@ services:
       - "${API_PYTHON_PORT:-5000}:${API_PYTHON_INTERNAL_PORT:-5000}"
     environment:
       - FLASK_ENV=${FLASK_ENV:-development}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://docker:docker@postgresql:5432/predictions-db}
     volumes:
       - ./api-python:/app
     networks:
