--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/query-sync-storage-persister": "^5.76.1",
     "@tanstack/react-query": "^5.76.1",
@@ -32,14 +31,13 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "jotai": "^2.12.4",
     "lucide-react": "^0.377.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -53,7 +51,6 @@
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/react-redux": "^7.1.33",
     "@vitejs/plugin-react": "^4.4.1",
     "cross-env": "^7.0.3",
     "plop": "^4.0.1",
