--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,37 @@
-# Frontend Configuration
+# Configurações gerais
+NETWORK_NAME=network_name
+NODE_ENV=production
+FLASK_ENV=production
+
+# Frontend
 FRONTEND_CONTAINER_NAME=frontend_prod
 FRONTEND_DOCKERFILE=Dockerfile
 FRONTEND_PORT=4175
 FRONTEND_INTERNAL_PORT=80
+VITE_API_URL=http://localhost:3002
 
-# Node API Configuration
+# API Node
 API_NODE_CONTAINER_NAME=api_node_prod
 API_NODE_DOCKERFILE=Dockerfile
 API_NODE_PORT=3002
 API_NODE_INTERNAL_PORT=3000
-NODE_ENV=production
+CORS_ORIGIN=http://localhost:4175
+FIRST_ADMIN_PASSWORD=strong_password_here
+PUBLIC_DIR=/app/outputs
+UPLOAD_DIR=/app/uploads
+JWT_SECRET=your_jwt_secret_key_here
 
-# Python API Configuration
+# Banco de dados PostgreSQL
+DB_CONTAINER_NAME=postgresql_db
+POSTGRESQL_USERNAME=docker
+POSTGRESQL_PASSWORD=docker
+POSTGRESQL_DATABASE=predictions-db
+POSTGRESQL_PORT_NUMBER=5432
+POSTGRESQL_HOST_PORT=5434
+DATABASE_URL=postgresql://docker:docker@postgresql:5432/predictions-db
+
+# API Python
 API_PYTHON_CONTAINER_NAME=api_python_prod
 API_PYTHON_DOCKERFILE=Dockerfile
 API_PYTHON_PORT=5002
 API_PYTHON_INTERNAL_PORT=5000
-FLASK_ENV=production
-DB_URL=postgresql+psycopg2://docker:docker@postgresql:5432/app_database
-
-# PostgreSQL Configuration
-DB_CONTAINER_NAME=postgresql_db
-DB_IMAGE=bitnami/postgresql:latest
-POSTGRESQL_USERNAME=docker
-POSTGRESQL_PASSWORD=docker
-POSTGRESQL_DATABASE=app_database
-POSTGRESQL_PORT_NUMBER=5432
-POSTGRESQL_HOST_PORT=5434
-
-# Network Configuration
-NETWORK_NAME=my_network
