--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,17 @@ services:
     build:
       context: ./front-end
       dockerfile: ${FRONTEND_DOCKERFILE:-Dockerfile}
-    env_file:
-      - ./front-end/.env
     ports:
       - "${FRONTEND_PORT:-4175}:${FRONTEND_INTERNAL_PORT:-80}"
     restart: always
-    
+    environment:
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:3002}
 
   api:
     container_name: ${API_NODE_CONTAINER_NAME:-api_node_prod}
     build:
       context: ./api-node
       dockerfile: ${API_NODE_DOCKERFILE:-Dockerfile}
-    env_file:
-      - ./api-node/.env
     ports:
       - "${API_NODE_PORT:-3002}:${API_NODE_INTERNAL_PORT:-3000}"
     restart: always
@@ -27,15 +24,22 @@ services:
       - network_name
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-
+      - DATABASE_URL=${DATABASE_URL:-postgresql://docker:docker@postgresql:5432/predictions-db}
+      - API_PORT=${API_NODE_INTERNAL_PORT:-3000}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:4175}
+      - FIRST_ADMIN_PASSWORD=${FIRST_ADMIN_PASSWORD}
+      - PUBLIC_DIR=${PUBLIC_DIR:-/app/outputs}
+      - UPLOAD_DIR=${UPLOAD_DIR:-/app/uploads}
+      - JWT_SECRET=${JWT_SECRET}
   postgresql:
     container_name: ${DB_CONTAINER_NAME:-postgresql_db}
-    image: ${DB_IMAGE:-bitnami/postgresql:latest}
+    image: bitnami/postgresql:16
     environment:
-      - POSTGRESQL_USERNAME=${POSTGRESQL_USERNAME}
-      - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD}
-      - POSTGRESQL_DATABASE=${POSTGRESQL_DATABASE}
-      - POSTGRESQL_PORT_NUMBER=${POSTGRESQL_PORT_NUMBER}
+      - POSTGRESQL_USERNAME=${POSTGRESQL_USERNAME:-docker}
+      - POSTGRESQL_PASSWORD=${POSTGRESQL_PASSWORD:-docker}
+      - POSTGRESQL_DATABASE=${POSTGRESQL_DATABASE:-predictions-db}
+      - POSTGRESQL_PORT_NUMBER=${POSTGRESQL_PORT_NUMBER:-5432}
+    restart: always
     ports:
       - "${POSTGRESQL_HOST_PORT:-5434}:${POSTGRESQL_PORT_NUMBER:-5432}"
     volumes:
@@ -53,7 +57,7 @@ services:
       - "${API_PYTHON_PORT:-5002}:${API_PYTHON_INTERNAL_PORT:-5000}"
     environment:
       - FLASK_ENV=${FLASK_ENV:-production}
-      - DB_URL=${DB_URL}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://docker:docker@postgresql:5432/predictions-db}
     networks:
       - network_name
 
