--- a/front-end/Dockerfile.dev
+++ b/front-end/Dockerfile.dev
@@ -1,6 +1,6 @@
-FROM node:lts-alpine3.21
+FROM node:22-bookworm-slim
 
-RUN apk add --no-cache vim openssl zsh git curl
+RUN apt-get update && apt-get install -y vim openssl zsh git curl && apt-get clean
 
 WORKDIR /app
 
@@ -18,6 +18,9 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
 RUN git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
 RUN git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
 
+RUN echo "HISTFILE=/app/.zsh_history" >> /root/.zshrc
+RUN echo "HISTSIZE=1000" >> /root/.zshrc
+RUN echo "SAVEHIST=1000" >> /root/.zshrc
 RUN echo "plugins=(git zsh-autosuggestions zsh-syntax-highlighting)" >> /root/.zshrc
 RUN echo "source /root/.oh-my-zsh/oh-my-zsh.sh" >> /root/.zshrc
 RUN echo "source ${ZSH_CUSTOM:-/root/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> /root/.zshrc
