feat: implement create and delete many user cards use cases and controllers
- Added CreateMany and DeleteMany use cases for user cards.
- Implemented corresponding controllers for handling requests.
- Updated user card repository to support bulk operations.
- Enhanced seed script to include user cards and relationships.
- Created routes for user card management including fetching, listing, and updating.
- Integrated Zod for request validation in controllers.

--- a/api-node/package.json
+++ b/api-node/package.json
@@ -11,7 +11,9 @@
 		"lint": "biome lint --fix",
 		"prisma:migrate": "prisma migrate dev --name",
 		"generate:zod": "prisma generate && zod-prisma-types generate",
-		"plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=plopfile.ts"
+		"plop": "cross-env NODE_OPTIONS='--import tsx' plop --plopfile=plopfile.ts",
+		"seed": "tsx prisma/seed/dev/seedModels.ts",
+		"seed:legacy": "node prisma/seed/dev/seed.js"
 	},
 	"zod-prisma-types": {
 		"output": "src/schemas/zod",
