--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,23 +1,48 @@
-FROM node:lts AS build
+FROM node:22-alpine AS build
 
 WORKDIR /app
 
-COPY package.json pnpm-lock.yaml ./
+# Copiar arquivos de dependência primeiro para cache de layer
+COPY package*.json ./
+COPY pnpm-lock.yaml ./
 
+# Instalar pnpm e dependências
 RUN npm install -g pnpm
+RUN pnpm install --frozen-lockfile
 
-RUN pnpm install
-
+# Copiar código fonte
 COPY . .
 
+# Build args e environment
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+# Build da aplicação
 RUN pnpm build
 
-FROM nginx:latest
+# Estágio de produção com nginx
+FROM nginx:alpine
 
+# Instalar curl para healthcheck
+RUN apk add --no-cache curl
+
+# Copiar arquivos buildados e configurações
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY mime.types /etc/nginx/mime.types
 
-EXPOSE 80/tcp
+# Configurar usuário não-root para segurança
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    chown -R nginx:nginx /etc/nginx/conf.d
+
+RUN touch /var/run/nginx.pid && \
+    chown -R nginx:nginx /var/run/nginx.pid
+
+# Usar usuário não-root
+USER nginx
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
